# controller/coba.go
@@ -64,41 +64,41 @@ func GetMenuID(c *fiber.Ctx) error {
 	return c.JSON(ps)
 }
 
-// GetMenuByCategory godoc
-// @Summary Get By Category Data Menu.
-// @Description Ambil per ID data menu.
-// @Tags MenuItem
-// @Accept json
-// @Produce json
-// @Param id path string true "Masukan category"
-// @Success 200 {object} MenuItem
-// @Failure 400
-// @Failure 404
-// @Failure 500
-// @Router /menu/{category} [get]
-func GetMenuByCategory(c *fiber.Ctx) error {
-	category := c.Params("category")
-	if category == "" {
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": "Wrong parameter",
-		})
-	}
-	ps, err := cek.GetMenuItemByCategory(category, config.Ulbimongoconn, "Proyek3")
-	if err != nil {
-		if errors.Is(err, mongo.ErrNoDocuments) {
-			return c.Status(http.StatusNotFound).JSON(fiber.Map{
-				"status":  http.StatusNotFound,
-				"message": fmt.Sprintf("No data found for category %s", category),
-			})
-		}
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": fmt.Sprintf("Error retrieving data for category %s", category),
-		})
-	}
-	return c.JSON(ps)
-}
+// // GetMenuByCategory godoc
+// // @Summary Get By Category Data Menu.
+// // @Description Ambil per ID data menu.
+// // @Tags MenuItem
+// // @Accept json
+// // @Produce json
+// // @Param id path string true "Masukan category"
+// // @Success 200 {object} MenuItem
+// // @Failure 400
+// // @Failure 404
+// // @Failure 500
+// // @Router /menu/{category} [get]
+// func GetMenuByCategory(c *fiber.Ctx) error {
+// 	category := c.Params("category")
+// 	if category == "" {
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": "Wrong parameter",
+// 		})
+// 	}
+// 	ps, err := cek.GetMenuItemByCategory(category, config.Ulbimongoconn, "Proyek3")
+// 	if err != nil {
+// 		if errors.Is(err, mongo.ErrNoDocuments) {
+// 			return c.Status(http.StatusNotFound).JSON(fiber.Map{
+// 				"status":  http.StatusNotFound,
+// 				"message": fmt.Sprintf("No data found for category %s", category),
+// 			})
+// 		}
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": fmt.Sprintf("Error retrieving data for category %s", category),
+// 		})
+// 	}
+// 	return c.JSON(ps)
+// }
 
 // GetMenu godoc
 // @Summary Get All Data Menu.
@@ -115,7 +115,7 @@ func GetMenu(c *fiber.Ctx) error {
 }
 
 // InsertDataMenu godoc
-// @Summary Insert data menu.
+// @Summary Insert Data Menu.
 // @Description Input data menu.
 // @Tags MenuItem
 // @Accept json
