# docs/swagger.yaml
@@ -136,33 +136,6 @@ paths:
       summary: Get All Data Menu.
       tags:
       - MenuItem
-  /menu/{category}:
-    get:
-      consumes:
-      - application/json
-      description: Ambil per ID data menu.
-      parameters:
-      - description: Masukan category
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controller.MenuItem'
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      summary: Get By Category Data Menu.
-      tags:
-      - MenuItem
   /menu/{id}:
     get:
       consumes:
